@@ -4,14 +4,14 @@ import java.io.Serializable;
 import java.time.LocalDate;
 import java.util.Objects;
 
-import javax.persistence.Column;
-import javax.persistence.Entity;
-import javax.persistence.EnumType;
-import javax.persistence.Enumerated;
-import javax.persistence.GeneratedValue;
-import javax.persistence.GenerationType;
-import javax.persistence.Id;
-import javax.validation.constraints.NotNull;
+import jakarta.persistence.Column;
+import jakarta.persistence.Entity;
+import jakarta.persistence.EnumType;
+import jakarta.persistence.Enumerated;
+import jakarta.persistence.GeneratedValue;
+import jakarta.persistence.GenerationType;
+import jakarta.persistence.Id;
+import jakarta.validation.constraints.NotNull;
 
 @Entity
 public class Compra implements Serializable {
@@ -115,8 +115,8 @@ public class Compra implements Serializable {
 
 	@Override
 	public String toString() {
-		return String.format("Compra [id=%s, pedidoId=%s, tempoDePreparo=%s, enderecoDestino=%s]", id, pedidoId,
-				tempoDePreparo, enderecoDestino);
+		return "Compra [id=%s, pedidoId=%s, tempoDePreparo=%s, enderecoDestino=%s]".formatted(id, pedidoId,
+		tempoDePreparo, enderecoDestino);
 	}
 
 }
